# h5cpp

./: .dockerignore  .gitignore  404.html  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS  COPYRIGHT  Dockerfile  Dockerfile.all  LICENSE.H5CPP  Makefile  README.md  TODO  architecture.md  docker-run.sh  index.html  mkdocs.yml  sitemap.xml  staging-build-matrix.md
api/: H5Acreate_8hpp_source.html  H5Adelete_8hpp_source.html  H5Aopen_8hpp_source.html  H5Aread_8hpp_source.html  H5Awrite_8hpp_source.html  H5Dappend_8hpp_source.html  H5Dcreate_8hpp_source.html  H5Dgather_8hpp_source.html  H5Dopen_8hpp_source.html  H5Dranges_8hpp_source.html  H5Dread_8hpp_source.html  H5Dwrite_8hpp_source.html  H5Eall_8hpp_source.html  H5Fcreate_8hpp_source.html  H5Fopen_8hpp_source.html  H5Ialgorithm_8hpp_source.html  H5Iall_8hpp_source.html  H5Marma_8hpp_source.html  H5Mblaze_8hpp_source.html  H5Mblitz_8hpp_source.html  H5Mdlib_8hpp_source.html  H5Meigen_8hpp_source.html  H5Mitpp_8hpp_source.html  H5Mstl_8hpp_source.html  H5Mublas_8hpp_source.html  H5Mvalarray_8hpp_source.html  H5Mxtensor_8hpp_source.html  H5Mxtensorblas_8hpp_source.html  H5Pall_8hpp_source.html  H5Pdapl_8hpp_source.html  H5Qall_8hpp_source.html  H5Rall_8hpp_source.html  H5Rreference_8hpp_source.html  H5Rregion_8hpp_source.html  H5Sall_8hpp_source.html  H5Tall_8hpp_source.html  H5Tmeta_8hpp_source.html  H5Zall_8hpp_source.html  H5Zpipeline_8hpp_source.html  H5Zpipeline__basic_8hpp_source.html  (+75 more)
architecture/: index.html
architecture-core/: index.html
architecture-integration/: index.html
architecture-io/: index.html
architecture-parallelism/: index.html
architecture-types/: index.html
bench/: CMakeLists.txt  README.md
bench/fixtures/: synthetic.hpp
bench/harness/: config.hpp
bench/workloads/: chunked_filtered.cpp  containers.cpp  filesystem_ceiling.cpp  high_throughput.cpp  sequential.cpp  small_object.cpp
build-verify/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  example-test-test_arma_io  example-test-test_attributes_io  example-test-test_basics_io  example-test-test_blaze_io  example-test-test_blitz_io  example-test-test_compound_struct_io  example-test-test_csv_io  example-test-test_dlib_io  example-test-test_multi_tu  example-test-test_n_bit_io  example-test-test_optimized_io  example-test-test_packet_table_io  example-test-test_raw_memory_io  example-test-test_stl_vector_io  example-test-test_string_io  example-test-test_transform_io  example-test-test_two_bit_io  example-test-test_ublas_io  example-test-test_utf_io  h5cpp-config-version.cmake  h5cpp-config.cmake  h5cpp-targets.cmake  test-example  test-h5adelete  test-h5capi  test-h5compat  test-h5cout  test-h5dappend  test-h5dgather  test-h5dio  test-h5dio_roundtrip  test-h5dranges  test-h5eall  test-h5ialgorithm  test-h5meta  test-h5pall  (+11 more)
cmake/: h5cpp.pc.in
compiler/: index.html
cpp-standard-compliance-report/: index.html
design/: index.html
docker/: mpi-CMakeLists.txt
docs/: architecture-core.md  architecture-integration.md  architecture-io.md  architecture-parallelism.md  architecture-types.md  architecture.md  compiler.md  cpp-standard-compliance-report.md  design.md  examples.md  filtering-pipeline-rework-report.md  getting-started.md  index.md  parallel-hdf5.md  s3.md  stl.md  thirdparty.md  type-support.md  workflow.md
doxy/: Doxyfile  DoxygenLayout.xml  Makefile  anchors.dox  customdoxygen.css  footer.html  header.html
examples/: CMakeLists.txt  index.html
examples/attributes/: index.html
examples/basics/: basics.cpp
examples/compound/: utils.hpp
examples/container/: index.html
examples/csv/: Makefile  csv.h  csv2hdf5.cpp
examples/datasets/: index.html
examples/datatypes/: n-bit.cpp  n-bit.hpp  two-bit.cpp
examples/groups/: groups.cpp  index.html
examples/half-float/christian-rau/: Makefile
examples/half-float/open-exr/: Makefile  half-float.cpp  utils.hpp
examples/linalg/: gmtl.cpp  newmat.cpp  nt2.cpp  opencv.cpp  valarray.cpp  xtensor-blas.cpp  xtensor.cpp
examples/multi-tu/: utils.hpp
examples/packet-table/: packettable.cpp  utils.hpp
examples/raw_memory/: raw.cpp
examples/s3/: CMakeLists.txt  s3.cpp
examples/sparse-matrix/: index.html
examples/stl/: utils.hpp
examples/transform/: transform.cpp
filtering-pipeline-rework-report/: index.html
getting-started/: index.html
h5cpp/: H5Acreate.hpp  H5Adelete.hpp  H5Aopen.hpp  H5Aread.hpp  H5Awrite.hpp  H5Dappend.hpp  H5Dcreate.hpp  H5Dgather.hpp  H5Dopen.hpp  H5Dranges.hpp  H5Dread.hpp  H5Dscatter.hpp  H5Dwrite.hpp  H5Eall.hpp  H5Fcreate.hpp  H5Fopen.hpp  H5Ialgorithm.hpp  H5Iall.hpp  H5Marma.hpp  H5Mblaze.hpp  H5Mblitz.hpp  H5Mdlib.hpp  H5Meigen.hpp  H5Mgmtl.hpp  H5Mitpp.hpp  H5Mnewmat.hpp  H5Mnt2.hpp  H5Mopencv.hpp  H5Mstl.hpp  H5Mublas.hpp  H5Mvalarray.hpp  H5Mxtensor.hpp  H5Mxtensorblas.hpp  H5Pall.hpp  H5Pdapl.hpp  H5Pdcpl.hpp  H5Qall.hpp  H5Rall.hpp  H5Rreference.hpp  H5Rregion.hpp  (+19 more)
test/: CMakeLists.txt  H5Aall.cpp  H5Adelete.cpp  H5Dappend.cpp  H5Dgather.cpp  H5Dio.cpp  H5Dio_roundtrip.cpp  H5Dranges.cpp  H5Drank.cpp  H5Eall.cpp  H5FDros3.cpp  H5FDros3_network.cpp  H5Ialgorithm.cpp  H5Mvalarray.cpp  H5Pall.cpp  H5Rall.cpp  H5Rreference.cpp  H5Sall.cpp  H5Tcomplex.cpp  H5Tfloat16.cpp  H5Tmeta.cpp  H5Zdeflate.cpp  H5Zfletcher32.cpp  H5Zlz4.cpp  H5Zpipeline.cpp  H5Zshuffle.cpp  H5Zszip.cpp  H5Zzstd.cpp  H5capi.cpp  H5compat.cpp  H5cout.cpp  H5meta.cpp  H5names.cpp  README.md  example.cpp  win_dapl_probe.cpp  win_h5dwrite_path_probe.cpp  win_hdf5_lifecycle_probe.cpp  win_stack_probe.cpp
test/examples/: CMakeLists.txt  CONVERSION_STRATEGY.md  test_arma_io.cpp  test_attributes_io.cpp  test_basics_io.cpp  test_blaze_io.cpp  test_blitz_io.cpp  test_compound_struct_io.cpp  test_csv_io.cpp  test_dlib_io.cpp  test_multi_tu.cpp  test_n_bit_io.cpp  test_optimized_io.cpp  test_packet_table_io.cpp  test_raw_memory_io.cpp  test_stl_vector_io.cpp  test_string_io.cpp  test_transform_io.cpp  test_two_bit_io.cpp  test_ublas_io.cpp  test_utf_io.cpp
test/support/: common.hpp  fixture.hpp  generator.hpp  names.hpp  pod_t.hpp  types.hpp
(+154 files in other folders)
